
Package: R.utils
================

Version: 1.9.7 [2011-12-16]
o BUG FIX: Now evalWithTimeout(..., onTimeout="silent") works.  Thanks
  Nicholas Beeton (Univ. of Tasmania, Australia) for reporting on this.


Version: 1.9.6 [2011-11-23]
o BUG FIX: evalCapture() with argument 'envir' defaulting to parent.frame()
  would not be evaluated in the parent frame as it should.  It appears
  that the internal capture.output() prevents this from happening, unless
  argument 'envir' is explictly evaluated within evalCapture(). 


Version: 1.9.5 [2011-11-19]
o ROBUSTNESS: Now parse() and as.character() handles "empty" GString:s.
o ROBUSTNESS: Now GString() asserts that it only holds one string.


Version: 1.9.4 [2011-11-15]
o SPEEDUP: Now Arguments$getCharacters(s, asGString=TRUE) is much
  faster for elements of 's' that are non-GStrings.  For long
  character vectors the speedup is 100-200x times.
o SPEEDUP: Now as.character() and parse() for GString return
  faster if the string is a plain string without markup etc.
  This made as.character() about 10-15 times faster.


Version: 1.9.3 [2011-11-07]
o Added 'quarts' to the list of (possible) devices for devOptions().
o BUG FIX: devOptions() assumed that all devices exist on
  all platforms, causing it to give an error on some.


Version: 1.9.2 [2011-11-06]
o Added evalCapture() for evaluating an expression and
  capturing its deparsed code and/or output.


Version: 1.9.1 [2011-11-05]
o Added toEPS(), toPDF(), toPNG() and toSVG().
o Added devOptions().
o Added default 'width' and 'height' values to eps().
o Turned png2() and jpeg2() into plain functions without a generic.  
  This is consistent with how eps() is defined.
o GENERALIZATION: Now the default 'width' is inferred from 
  devOptions() if needed.
o DOCUMENTATION: Added an example to help(devEval).


Version: 1.9.0 [2011-11-03]
o Added queryRCmdCheck(), which retrieves the status of 'R CMD check',
  iff it is running.


Version: 1.8.8 [2011-11-01]